@@ -27,6 +27,7 @@ import dev.terminalmc.chatnotify.gui.widget.HsvColorPicker;
 import dev.terminalmc.chatnotify.gui.widget.field.MultiLineTextField;
 import dev.terminalmc.chatnotify.gui.widget.field.TextField;
 import dev.terminalmc.chatnotify.gui.widget.list.OptionList;
+import dev.terminalmc.chatnotify.mixin.accessor.AbstractWidgetAccessor;
 import dev.terminalmc.chatnotify.util.Unicode;
 import dev.terminalmc.chatnotify.util.text.FormatUtil;
 import dev.terminalmc.chatnotify.util.text.MessageUtil;
@@ -39,7 +40,6 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.Style;
 import net.minecraft.network.chat.contents.TranslatableContents;
 
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
@@ -65,17 +65,22 @@ public class TriggerEditorList extends OptionList {
             OptionScreen screen,
             int width,
             int height,
-            int y,
+            int top,
+            int bottom,
             int entryWidth,
             int entryHeight,
             int entrySpacing,
             Trigger trigger,
             TextStyle textStyle
     ) {
-        super(mc, screen, width, height, y, entryWidth, entryHeight, entrySpacing);
+        super(mc, screen, width, height, top, bottom, entryWidth, entryHeight, entrySpacing);
         this.trigger = trigger;
         this.textStyle = textStyle;
-        this.recentChat = ChatNotify.unmodifiedChat.stream().toList().reversed();
+        List<Component> recentChatReversed = ChatNotify.unmodifiedChat.stream().toList();
+        this.recentChat = new ArrayList<>();
+        for (int i = recentChatReversed.size() - 1; i >= 0; i--) {
+            this.recentChat.add(recentChatReversed.get(i));
+        }
     }
 
     @Override
@@ -211,7 +216,7 @@ public class TriggerEditorList extends OptionList {
         });
 
         // If no message entries, add note
-        if (!(children().getLast() instanceof Entry.MessageEntry)) {
+        if (!(children().get(children().size() - 1) instanceof Entry.MessageEntry)) {
             addEntry(new OptionList.Entry.Text(
                     dynWideEntryX,
                     dynWideEntryWidth,
@@ -255,7 +260,7 @@ public class TriggerEditorList extends OptionList {
                                             list.init();
                                         }
                                 );
-                typeButton.setTooltipDelay(Duration.ofMillis(500));
+                typeButton.setTooltipDelay(500);
                 elements.add(typeButton);
                 movingX += list.tinyWidgetWidth;
 
@@ -297,7 +302,7 @@ public class TriggerEditorList extends OptionList {
                             "option",
                             "notif.trigger.style_target.add.tooltip"
                     )));
-                    styleButton.setTooltipDelay(Duration.ofMillis(500));
+                    styleButton.setTooltipDelay(500);
                 } else {
                     styleButton.active = false;
                 }
@@ -332,7 +337,7 @@ public class TriggerEditorList extends OptionList {
                         "option",
                         "notif.trigger.style_target.tooltip"
                 )));
-                infoIcon.setTooltipDelay(Duration.ofMillis(500));
+                infoIcon.setTooltipDelay(500);
                 elements.add(infoIcon);
                 movingX += list.tinyWidgetWidth;
 
@@ -357,7 +362,7 @@ public class TriggerEditorList extends OptionList {
                                             list.init();
                                         }
                                 );
-                typeButton.setTooltipDelay(Duration.ofMillis(500));
+                typeButton.setTooltipDelay(500);
                 elements.add(typeButton);
                 movingX += list.tinyWidgetWidth;
 
@@ -473,7 +478,7 @@ public class TriggerEditorList extends OptionList {
                 elements.add(labelButton);
 
                 widget.setWidth(fieldWidth);
-                widget.setHeight(height);
+                ((AbstractWidgetAccessor) widget).chatnotify$setHeight(height);
                 widget.setX(x + width - fieldWidth);
                 elements.add(widget);
             }
